--- a/RestExamples/pom.xml
+++ b/RestExamples/pom.xml
@@ -52,7 +52,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>RESTfulExample</finalName>
+		<finalName>RestExamples</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
